# hydrophonic-app

./: .env  .env-tpl  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: admin.py  filters.py  models.py  urls.py  views.py
app/decorators/: __init__.py  is_owner.py
app/migrations/: 0001_initial.py  0002_measurement_timestamp.py
app/serializers/: __init__.py  auth_serializer.py  measurement_serializer.py  system_serializer.py
app/tests/: __init__.py  test_hydroponic_systems.py  test_jwt.py  test_measurements.py  test_register.py
app/utils/: create_data.py  create_measurements.py
app/views/: __init__.py  auth_view.py  measurement_view.py  system_view.py
core/: settings.py  urls.py
data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
data/base/16384/: 2619
data/base/5/: pg_internal.init
data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
data/pg_stat/: pgstat.stat
